# a26-kickstart

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  template.toml
{{project_name}}/: CMakeLists.txt  atari2600.cfg  atari2600.toolchain.cmake
{{project_name}}/include/: riot.inc  tia.inc
{{project_name}}/scripts/: vice2dasm.py
{{project_name}}/src/: main.asm
